--- a/Example/CBPWordPressExample/Supporting Files/CBPWordPressExample-Info.plist
+++ b/Example/CBPWordPressExample/Supporting Files/CBPWordPressExample-Info.plist
@@ -23,6 +23,14 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleURLName</key>
+			<string>BroadsheetIe</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>BroadsheetIe</string>
+			</array>
+		</dict>
+		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
