--- a/Example/CBPWordPressExample/Supporting Files/CBPWordPressExample-Info.plist
+++ b/Example/CBPWordPressExample/Supporting Files/CBPWordPressExample-Info.plist
@@ -42,13 +42,15 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3.0.0</string>
+	<string>3.0.0.7</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
