--- a/Example/BroadsheetTodayExtension/Info.plist
+++ b/Example/BroadsheetTodayExtension/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Broadsheet Latest Posts</string>
+	<string>Broadsheet.ie</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
