--- a/Example/CBPWordPressExample/Resources/Settings.bundle/Acknowledgements.plist
+++ b/Example/CBPWordPressExample/Resources/Settings.bundle/Acknowledgements.plist
@@ -483,7 +483,7 @@ THE SOFTWARE.
 			<key>FooterText</key>
 			<string>Copyright 2013 Google Inc.</string>
 			<key>Title</key>
-			<string>google-plus-ios-sdk</string>
+			<string>googleplus-ios-sdk</string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 		</dict>
